--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script type="module" src="/src/index.tsx"></script>
   </head>
 
-  <body>
+  <body class="text-slate-700 antialiased dark:bg-black dark:text-slate-200">
     <div id="root"></div>
   </body>
 </html>
