stretch the base-layout to the height of the screen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script type="module" src="/src/index.tsx"></script>
   </head>
 
-  <body class="text-slate-700 antialiased dark:bg-black dark:text-slate-200">
-    <div id="root"></div>
+  <body class="flex min-h-screen flex-col text-slate-700 antialiased dark:bg-black dark:text-slate-200">
+    <div class="flex flex-grow flex-col" id="root"></div>
   </body>
 </html>
